# orderflow-trading-charts

./: .gitignore  .n8n-config.json  DATA_FLOW_ARCHITECTURE.md  chart-1year.cfm  chart-test.html  chart-today.cfm  chart-today2.cfm  dom-iqfeed.cfm  dom-v2.cfm  dom.cfm  footprint-iqfeed.cfm  heatmap-iqfeed.cfm  heatmap-v2.cfm  heatmap.cfm
api/: chart-data.cfm  delta-data.cfm  orderflow-data.cfm
collector/: collector.js  orderflow-collector.service  package.json  start.sh
db/: db.cfm  schema.sql
iqfeed-bridge/: Cargo.toml  SETUP.md
iqfeed-bridge/src/: main.rs
